[package]
name = "container-experiment"
version = "0.1.0"
authors = ["Dan Munckton <munckfish@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.11.1"

[target.'cfg(target_os = "linux")'.dependencies]
procinfo = "0.4.2"
