[package]
name = "hello-world"
version = "0.1.0"
authors = ["Dan Munckton <munckfish@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.4", features = ["full"] }
futures = "0.3.1"
tokio-util = { version = "0.2.0", features = ["codec"] }
